@@ -1,27 +1,12 @@
 #VRML V2.0 utf8
 
-DEF Background Transform {
-  rotation 0 0 1 0.785398
-  children DEF _12 Background {
-    skyAngle [ 0.8, 1.3, 1.4, 1.5708 ]
-    skyColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
-    groundAngle [ 0.6, 1.2, 1.3, 1.5708 ]
-    groundColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
-    frontUrl "Pixi.png"
-    backUrl "Pixi.png"
-    leftUrl "Pixi.png"
-    rightUrl "Pixi.png"
-    topUrl "Pixi.png"
-    bottomUrl "Pixi.png"
-  }
-}
 Background {
   skyAngle [ 0.8, 1.3, 1.4, 1.5708 ]
   skyColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
+  groundAngle [ 0.6, 1.2, 1.3, 1.5708 ]
+  groundColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
 }
-Background {
-  skyColor 0.21 0.31 0.59
-}
+
 Transform {
   children Shape {
     appearance Appearance {
