@@ -1,0 +1,22 @@
+#VRML V2.0 utf8
+
+Background {
+  frontUrl "../CubeMapTexturing/images/lostvalley_south.png"
+  backUrl "../CubeMapTexturing/images/lostvalley_north.png"
+  leftUrl "../CubeMapTexturing/images/lostvalley_east.png"
+  rightUrl "../CubeMapTexturing/images/lostvalley_west.png"
+  topUrl "../CubeMapTexturing/images/lostvalley_up.png"
+  bottomUrl "../CubeMapTexturing/images/lostvalley_down.png"
+  skyColor 0.2 0.2 0.2
+}
+
+Transform {
+  children Shape {
+    appearance Appearance {
+      material Material {
+        diffuseColor 1 0 0
+      }
+    }
+    geometry Box { }
+  }
+}
