@@ -89,7 +89,7 @@ private:
 	isBehind (const Line3f &, const Vector3f &) const;
 	
 	Vector3f
-	getPointOnDisk (const Line3f &) const;
+	getVector (const Line3f &, const Vector3f &) const;
 	
 	bool
 	getTrackPoint (const Line3f &, Vector3f &, bool = false) const;
