@@ -1,5 +1,11 @@
 2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Background.cpp:
+	* CylinderSensor.h:
+	* CylinderSensor.cpp: 
+
+2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Background.h:
 	* Background.cpp:
 	* CylinderSensor.cpp: 
