@@ -1,6 +1,12 @@
 2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
+	* Background.wrl:
+	* ImageBackground.wrl: 
+
+2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
 	* Canvas.wrl:
 	* Dashboard.wrl: 
 
